<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/foreground" android:gravity="left" android:layout_gravity="left" android:id="@id/first_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:layout_marginBottom="18.0dip" android:text="@string/sign_on_nickname_persisted_creating_keys" style="@style/Nemesis.Widget.TextView" />
    <TextView android:textColor="@color/foreground" android:gravity="left" android:layout_gravity="left" android:id="@id/second_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="18.0dip" android:text="@string/sign_on_nickname_persisted_id_confirmed" style="@style/Nemesis.Widget.TextView" />
    <TextView android:textColor="@color/foreground" android:gravity="left" android:layout_gravity="left" android:id="@id/third_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign_on_nickname_persisted_program_initiated" style="@style/Nemesis.Widget.TextView" />
</LinearLayout>