<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff000000" android:paddingLeft="16.0dip" android:paddingTop="48.0dip" android:paddingRight="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <ScrollView android:background="@drawable/tos_gradient" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:scrollbarFadeDuration="0">
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/foreground" android:id="@id/tos_body" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sign_on_tos_location" />
        </ScrollView>
        <FrameLayout android:id="@id/tos_acceptance_container" android:background="@drawable/tos_acceptance_checkbox_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <CheckBox android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/modern_yellow" android:id="@id/tos_acceptance" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sign_on_tos_accept" />
        </FrameLayout>
    </LinearLayout>
    <CheckBox android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/foreground" android:id="@id/tos_promotions" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sign_on_tos_promotions" />
    <Button android:enabled="false" android:layout_gravity="right" android:id="@id/positive_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/action_confirm" style="@style/Nemesis.Widget.Modern.Button.ActionButton.Positive" />
</LinearLayout>