<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:background="#ff000000" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="4.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="#ffffffff" android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1.0" />
        <ImageButton android:layout_gravity="center_vertical" android:id="@id/grid_button" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:src="@drawable/btn_grid" />
    </LinearLayout>
    <ImageView android:layout_gravity="center_vertical" android:background="@color/subtle_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageButton android:layout_gravity="center_vertical" android:id="@id/prev_photo_button" android:background="@null" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_menu_back" />
                <com.nianticproject.ingress.multiphotos.LargestSquareRelativeLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <android.support.v4.view.ViewPager android:id="@id/view_pager" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    <View android:id="@id/view_pager_touch_interceptor" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                    <TextView android:textColor="#ffffffff" android:gravity="center" android:id="@id/error_retry" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/multi_photo_error_retry" android:layout_centerInParent="true" />
                    <ImageButton android:layout_gravity="center" android:id="@id/portal_add_photo_icon" android:background="@drawable/transparent_with_blue_border_and_pressed_state" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/portal_add_photo_icon" android:layout_centerInParent="true" />
                </com.nianticproject.ingress.multiphotos.LargestSquareRelativeLayout>
                <ImageButton android:layout_gravity="center_vertical" android:id="@id/next_photo_button" android:background="@null" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_menu_forward" />
                <ProgressBar android:layout_gravity="center_vertical" android:id="@id/photos_loading_spinner" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Nemesis.Widget.ProgressBar" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/photo_specific_widgets_container" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip">
                <ImageButton android:layout_gravity="center_vertical" android:id="@id/vote_button" android:background="@drawable/btn_vote_holo_dark" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <ImageView android:layout_gravity="center_vertical" android:background="@color/subtle_divider" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" />
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ffffffff" android:layout_gravity="center_vertical" android:id="@id/vote_count" android:paddingTop="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
                <ImageButton android:layout_gravity="center_vertical" android:id="@id/new_photo" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/new_photo" />
            </LinearLayout>
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/foreground" android:id="@id/description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" />
            <Button android:textSize="15.0sp" android:textColor="#ffffffff" android:layout_gravity="right|center" android:id="@id/add_description_button" android:background="@drawable/menu_item_btn" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginRight="26.0dip" android:minHeight="32.0dip" android:text="@string/add_description" style="@style/Nemesis.Widget.Modern.Button.ActionButton.Neutral" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:background="#ff000000" android:paddingLeft="26.0dip" android:paddingTop="20.0dip" android:paddingRight="26.0dip" android:paddingBottom="26.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textColor="#ffffffff" android:id="@id/done_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="38.0dip" android:text="@string/action_done" android:layout_alignTop="@id/report_problem" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/Nemesis.Widget.Modern.Button.ActionButton.Neutral" />
        <Button android:textColor="#ffffffff" android:id="@id/report_problem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="38.0dip" android:text="@string/edit" android:layout_alignParentLeft="true" style="@style/Nemesis.Widget.Modern.Button.ActionButton.Neutral" />
    </RelativeLayout>
</LinearLayout>